tests/profile/error/deltatimes/wrongtype_value.profile
{
  "version": { "major": 1, "minor": 0 },
  "delta_times": [
    1, 10, "notANumber", 200
  ]
}
